# faust-cpp

./: .env.example  .gitignore  CMakeLists.txt  Makefile  README.md  esp-idf.sh  flash.sh  loadable_elf_example_test.py  rebuild.sh  reflash.sh  sdkconfig  sdkconfig.old
faust-code/: Djembe.dsp  DjembeGroove.dsp  EchoTest.dsp  PWMSiren.dsp  SillyDelay.dsp  SineSweep.dsp  SingleDelay.dsp  djembeRev.dsp
faust-code/DjembeGroove/FaustDSP/: CMakeLists.txt
faust-code/SillyDelay/FaustDSP/: CMakeLists.txt  SillyDelay.cpp
faust-code/SillyDelay/FaustDSP/include/: SillyDelay.h
faust-code/max patches/: Djembe.maxpat  LEDs.maxpat
main/: CMakeLists.txt  DjembeGroove.cpp  DjembeGroove.h  FaustProgram.cpp  FaustProgram.h  PWMSiren.cpp  djembeRev.cpp  dsp-template.txt  dsp.cpp  dsp.h  hello_world_m.cpp  leds.cpp  leds.h  main-template.cpp  main-template.txt  main.cpp  stupid.cpp  udp_callback.cpp  udp_server.cpp
